--- a/vercel.json
+++ b/vercel.json
@@ -5052,7 +5052,72 @@
         "permanent": true
     },
     {
-        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test",
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test14",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test13",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test12",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test11",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test10",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test9",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test8",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test7",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test6",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test5",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test4",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test3",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test2",
+        "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
+        "permanent": true
+    },
+            {
+        "source": "/womens/jeans/dusters-high-rise-non-stretch-test-test1",
         "destination": "https://rollasjeans.com/au/collections/womens-jeans-dusters",
         "permanent": true
     }
